# django-helpdesk

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .python-version  .readthedocs.yaml  .travis.yml  AUTHORS  CHANGELOG  CHANGES  CONTRIBUTING  CONTRIBUTING.rst  Dockerfile  LICENSE  LICENSE.3RDPARTY  LICENSE.NICEDIT  MANIFEST.in  Makefile  README  README.md  README.rst  README.txt  SECURITY.md  UPGRADE  admin.py  api.py  azure-pipelines.yml  build_project.sh  constraints-Django22.txt  constraints-Django32.txt  constraints-Django4.txt  constraints-Django5.txt  entrypoint  feeds.py  forms.py  image_generate.ipynb  lib.py  models.py  (+11 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-standalone-docker-image.yml  codeartifact-deploy.yml  deploy-production.yml  docker-image.yml  pythonpackage.yml  release_to_pypi.yml  test.yml
.tx/: config
demo/: README.rst  manage.py  setup.py
demo/demodesk/: manage.py
demodesk/: README.rst
demodesk/config/: wsgi.py
demodesk/fixtures/: demo.json
docs/: Makefile  api.rst  conf.py  configuration.rst  contributing.rst  custom_fields.rst  custom_templates.rst  iframe_submission.rst  index.rst  install.rst  integration.rst  license.rst  settings.rst  spam.rst  standalone.rst  teams.rst  upgrade.rst  webhooks.rst
docs/doctrees/: api.doctree  configuration.doctree  custom_fields.doctree  environment.pickle  index.doctree  install.doctree  license.doctree  settings.doctree  spam.doctree
docs/html/: .buildinfo  api.html  configuration.html  custom_fields.html  genindex.html  index.html  install.html  license.html  objects.inv  search.html  searchindex.js  settings.html  spam.html
docs/source/: api.rst  conf.py  configuration.rst  custom_fields.rst  index.rst  install.rst  license.rst  settings.rst  spam.rst
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
fixtures/: initial_data.json
helpdesk/: .flake8  __init__.py  admin.py  akismet.py  apps.py  decorators.py  email.py  email_utils.py  exceptions.py  filters.py  forms.py  lib.py  middleware.py  models.py  monkey_patch.py  orm_operators.py  poll_helpdesk_email_queues.sh  preset_form_fields.py  query.py  serializers.py  settings.py  signals.py  tasks.py  templated_email.py  update_ticket.py  urls.py  user.py  validators.py  webhooks.py
helpdesk/calendars/: __init__.py  google.py
helpdesk/fixtures/: emailtemplate.json  emailtemplate_en.json  initial_data.json
helpdesk/htdocs/: helpdesk.css  hover.js
helpdesk/migrations/: 0001_initial.py  0002_populate_usersettings.py  0002_socks_proxy.py  0003_auto__add_field_customfield_ordering.py  0003_initial_data_import.py  0003_populate_usersettings.py  0004_add_per_queue_staff_membership.py  0004_auto__add_field_ticket_due_date.py  0004_initial_data_import.py  0005_add_field_CustomField_empty_selection_list.py  0005_add_per_queue_staff_membership.py  0005_auto__add_field_customfield_empty_selection_list.py  0005_queues_no_null.py  0006_auto__add_field_ticket_tags.py  0006_email_maxlength.py  0007_auto_20151215_1517.py  0007_max_length_by_integer.py  0008_extra_for_permissions.py  0009_migrate_queuemembership.py  0010_remove_queuemembership.py  0011_admin_related_improvements.py  0012_add_submitter_email_id_field_to_ticket.py  0012_add_submitter_email_id_field_to_ticket.py.py  0012_queue_default_owner.py  0013_add_submitter_email_id_field_to_ticket.py  0013_auto_20160627_1045.py  0013_email_box_local_dir_and_logging.py  0013_store_message_id_field_into_followup_model.py  0014_add_enable_notifications_on_email_events_to_ticket.py  0014_queue_enabled.py  0014_usersettings_related_name.py  0015_auto_20170127_0421.py  (+151 more)
htdocs/: filter.js  helpdesk.css  jquery.ui-1.6b.all.packed.js  nicEdit.js
scripts/: create_escalation_exclusions.py  escalate_tickets.py  get_email.py
standalone/: .gitignore  Caddyfile  Dockerfile  Dockerfile.extras  README.md  custom_navigation_header.html  docker-compose-dev.yml  docker-compose.yml  entrypoint.sh  extra-requirements.txt  manage.py  requirements-extras.txt  requirements.txt  setup.sh
templatetags/: in_list.py  svn_revision.py  ticket_to_link.py
tests/: __init__.py  helpers.py  test_api.py  test_attachments.py  test_checklist.py  test_email_notifications.py  test_get_email.py  test_kb.py  test_login.py  test_navigation.py  test_public_actions.py  test_query.py  test_savequery.py  test_time_spent.py  test_update_ticket_view.py  test_webhooks.py
views/: api.py  feeds.py  kb.py  public.py  staff.py
(+559 files in other folders)
